# zephyr-silabs

./: .gitignore  .gitlint  .ruff-excludes.toml  CMakeLists.txt  CODEOWNERS  Kconfig  README.md  REUSE.toml  pkg.slt  west.yml
.github/: dependabot.yml
.github/actions/action-slt-setup/: action.yml
.github/workflows/: build.yml  compliance.yml  do_not_merge.yml  manifest.yml  run_utf_tests.yml  update_project_revision.yml  upstream-build.yml
LICENSES/: Zlib.txt
boards/: Kconfig  README.md
boards/silabs/radio_boards/siwx917_rb4338a/: Kconfig.defconfig  board.cmake  board.yml  siwx917_rb4338a.dts  siwx917_rb4338a.yaml  siwx917_rb4338a_defconfig
doc/: getting-started-linux.md
drivers/: CMakeLists.txt  Kconfig
drivers/bluetooth/: CMakeLists.txt  Kconfig
drivers/bluetooth/hci/: CMakeLists.txt  Kconfig.siwx917  hci_silabs_siwx917.c  siwx917_hci.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.siwx917  clock_control_silabs_siwx917.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.siwx917  dma_silabs_siwx917.c
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.siwx917  entropy_silabs_cryptoacc_trng.c  entropy_silabs_siwx917.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.siwx917  soc_flash_silabs_siwx917.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.siwx917  gpio_silabs_siwx917.c  gpio_silabs_siwx917_uulp.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.siwx917  pinctrl_silabs_siwx917.c
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.siwx917  watchdog_silabs_siwx917.c
drivers/wifi/: CMakeLists.txt  Kconfig
drivers/wifi/siwx917/: CMakeLists.txt  Kconfig.siwx917  siwx917_wifi.c  siwx917_wifi.h  siwx917_wifi_socket.c  siwx917_wifi_socket.h
dts/arm/silabs/: siwg917.dtsi  siwg917m111mgtba.dtsi
dts/bindings/bluetooth/: silabs,bt-hci-siwx917.yaml
dts/bindings/clock/: silabs,siwx917-clock.yaml
dts/bindings/dma/: silabs,siwx917-dma.yaml
dts/bindings/flash/: silabs,siwx917-flash-controller.yaml
dts/bindings/gpio/: silabs,siwx917-gpio-port.yaml  silabs,siwx917-gpio-uulp.yaml  silabs,siwx917-gpio.yaml
dts/bindings/pinctrl/: silabs,siwx917-pinctrl.yaml
dts/bindings/rng/: silabs,siwx917-rng.yaml
dts/bindings/watchdog/: silabs,siwx917-watchdog.yaml
dts/bindings/wifi/: silabs,siwx917-wifi.yaml
include/zephyr/dt-bindings/clock/silabs/: siwx917-clock.h
include/zephyr/dt-bindings/pinctrl/: silabs-pinctrl-siwx917.h
modules/: CMakeLists.txt
modules/hal_silabs/: CMakeLists.txt
modules/hal_silabs/simplicity_sdk/: CMakeLists.txt
modules/hal_silabs/simplicity_sdk/inc/: sl_mbedtls_config_zephyr.h  sl_psa_crypto_config_zephyr.h  sli_psec_osal_zephyr.h
modules/hal_silabs/wiseconnect/: CMakeLists.txt
modules/hal_silabs/wiseconnect/config/: sl_si91x_wrap_config.h
modules/wifi_app_util/: CMakeLists.txt
modules/wifi_app_util/include/: wifi_app_util.h
modules/wifi_app_util/src/: wifi_app_util.c
samples/bt_blinky/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bt_blinky/src/: main.c
samples/comparator/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/comparator/boards/: pg23_pk2504a.overlay  pg28_pk2506a.overlay  xg24_dk2601b.overlay  xg24_rb4187c.overlay  xg27_dk2602a.overlay  xg28_rb4401c.overlay  xg29_rb4412a.overlay
samples/comparator/src/: main.c
samples/simple_txrx/: CMakeLists.txt  prj.conf  sample.yaml
samples/simple_txrx/src/: main.c
samples/simple_txrx/src/rail-configs/sltb010a/: rail_config.c  rail_config.h
samples/simple_txrx/src/rail-configs/xg23_rb4210a/: radio_settings.radioconf  rail_config.c  rail_config.h
samples/simple_txrx/src/rail-configs/xg24_dk2601b/: rail_config.c  rail_config.h
samples/simple_txrx/src/rail-configs/xg28_ek2705a/: radio_settings.radioconf  rail_config.c
samples/siwx91x_ota/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/siwx91x_ota/src/: ca-cert_der.c  main.c
samples/wifi_ble_coex_demo/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/wifi_ble_coex_demo/src/: app_config.h  main.c
samples/wifi_provisioning_over_ble/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/wifi_provisioning_over_ble/src/: app_config.h  main.c  wifi_app_util.c  wifi_app_util.h
soc/: CMakeLists.txt  Kconfig.soc
soc/silabs/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild  soc.yml
soc/silabs/silabs_s2/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sysbuild  secure_storage_aead_get.c
soc/silabs/silabs_siwx917/: CMakeLists.txt  Kconfig  Kconfig.soc  siwx917_isp_prepare.py
soc/silabs/silabs_siwx917/siwg917/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  linker.ld  nwp_init.c  pinctrl_soc.h  soc.c  soc.h
tests/: test_invariant_main.c
tests/crypto/psa_crypto/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/crypto/psa_crypto/src/: aead.c  cipher.c  hash.c  key_agreement.c  mac.c  main.c  sign.c  test_vectors.c  test_vectors.h
zephyr/: module.yml
zephyr/cmake/: commander_sign.cmake
zephyr/cmake/modules/: FindSimplicityCommander.cmake
(+7 files in other folders)
